  * Follow symlinks while checking for other copy of the C library.  (Closes:
    #365838)
  * Invalidate nscd cache when calling /etc/init.d/nscd restart.  (Closes: 
    #365676, #365677)
  * /usr/sbin/tzconfig: set umask to 022.  (Closes: #367145)
  * debian/main/control.in: make locales Replaces: lliurex-belocs-locales-data.
    (Closes: #365651)

  [ Denis Barbier ]
  * Preserve hard links when compiling the locales-all package, this reduces
    package size by a factor of 3.  Thanks to Jeroen van Wolffelaar for noticing.
  * Let locales-all Provides: locales instead of a virtual generated-locales
    package.  This is requested by Jeroen van Wolffelaar to allow this new
    package enter unstable.  Packages which Build-Depends on locales are
    likely to FTBFS if locales-all is installed, this dependency will be
    fixed in a later release.
  * Fix location of locales/NEWS.Debian.  Thanks Matthijs Mohlmann.
    (Closes: #362763)
  * locales.postinst: Do not abort if the current locale is not generated.
  * locales.config: Fix shell scripting when "All locales" is selected along
    with other choices,  Thanks Olivier Trichet.  (Closes: #364251)
  * update-locale: When checking for invalid locale settings, do not mess up
    with current environment settings.
  * Remove sem_*.3 manual pages from glibc-doc, these manual pages are updated
    and maintained in the manpages-dev package.  (Closes: #365547)

  [ Michael Banck ]
  * Add hurd-i386/cvs-posix-opts.diff (Define many missing options, most
    notably _POSIX_THREAD_SAFE_FUNCTIONS) by Roland McGrath (patch from 
    HEAD).

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 14 Apr 2006 20:28:41 +0200

glibc (2.3.6-7) unstable; urgency=medium

  [ Aurelien Jarno ]
  * Urgency set to medium because this version fixes and RC bug in testing.
  * Optimized libraries should actually be cross-compiled as we don't know the
    CPU that will be used.