@@ -18,6 +18,7 @@ glibc (2.3.6-8) UNRELEASED; urgency=low
   * /usr/sbin/tzconfig: set umask to 022.  (Closes: #367145)
   * debian/main/control.in: make locales Replaces: lliurex-belocs-locales-data.
     (Closes: #365651)
+  * Move the NJOBS part to debian/sysdeps/(system) to debian/rules.
 
   [ Denis Barbier ]
   * Preserve hard links when compiling the locales-all package, this reduces
